# InvestKode.AI-Assignment

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  QUICK_START.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/samples/: .gitkeep  README.md
src/: __init__.py
src/api/: main.py  schemas.py
src/insights/: __init__.py  detector.py
src/streaming/: __init__.py  streamer.py
src/transcription/: __init__.py  transcriber.py
src/utils/: __init__.py  audio_utils.py  device_utils.py
tests/: __init__.py  test_audio_utils.py  test_integration.py  test_transcription.py
